--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,7 +1,15 @@
-<h1>{{headerText}}</h1>
+{{!-- <h1>{{headerText}}</h1>
 
 <div>
     <a href="/">Weather</a>
     <a href="/help">Help</a>
     
-</div>
+</div> --}}
+
+<header>
+    <h1>{{title}}</h1>
+
+    <a href="/">Weather</a>
+    <a href="/about">About</a>
+    <a href="/help">Help</a>
+</header>
