--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -19,60 +19,60 @@
   <link rel="stylesheet" href="/css/styles.css">
   <style>
     body {
-    color: #333333;
-    font-family: arial;
-    max-width: 650px;
-    margin: 0 auto;
-    padding: 0 16px;
+      color: #333333;
+      font-family: arial;
+      max-width: 650px;
+      margin: 0 auto;
+      padding: 0 16px;
 
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh
-}
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh
+    }
 
-.main-content {
-    flex-grow: 1;
-}
+    .main-content {
+      flex-grow: 1;
+    }
 
-footer {
-    color: #888888;
-    border-top: 1px solid #eeeeee;
-    margin-top: 16px;
-    padding: 16px 0;
-}
+    footer {
+      color: #888888;
+      border-top: 1px solid #eeeeee;
+      margin-top: 16px;
+      padding: 16px 0;
+    }
 
-header {
-    margin-top: 16px;
-    margin-bottom: 48px;
-}
+    header {
+      margin-top: 16px;
+      margin-bottom: 48px;
+    }
 
-h1 {
-    font-size: 64px;
-    margin-bottom: 16px;
-}
+    h1 {
+      font-size: 64px;
+      margin-bottom: 16px;
+    }
 
-header a {
-    color: #888888;
-    margin-right: 16px;
-    text-decoration: none;
-}
+    header a {
+      color: #888888;
+      margin-right: 16px;
+      text-decoration: none;
+    }
 
-.portrait {
-    width: 250px;
-}
+    .portrait {
+      width: 250px;
+    }
 
-input {
-    border: 1px solid #cccccc;
-    padding: 8px;
-}
+    input {
+      border: 1px solid #cccccc;
+      padding: 8px;
+    }
 
-button {
-    cursor: pointer;
-    border: 1px solid #888888;
-    background: #888888;
-    color: white;
-    padding: 8px;
-}
+    button {
+      cursor: pointer;
+      border: 1px solid #888888;
+      background: #888888;
+      color: white;
+      padding: 8px;
+    }
   </style>
 
 </head>
@@ -81,8 +81,11 @@ button {
   <div class="main-content">
     {{>header}}
     <p>{{helpText}}</p>
+    <p> Hi Here ,Happy To Help.This is a weather forecasting app.
+      You can give give any valid city name and get the output.
+      For any queries and suggestions to improve you can mail me at @saswatichoudhury88@gmail.com
+    </p>
   </div>
-
   {{>footer}}
 </body>
 
